samples/_failures_safe/1761467056_32647d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e67e697.c: In function ‘main’:
./samples/SAFE/__tmp_4e67e697.c:151:12: error: missing terminating " character
  151 |     printf("State Machine Simulation\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4e67e697.c:151:5: error: expected expression at end of input
  151 |     printf("State Machine Simulation\n
      |     ^~~~~~
./samples/SAFE/__tmp_4e67e697.c:151:5: error: expected declaration or statement at end of input
